python_stack/django/django_orm/dojo_ninjas/dojo_and_ninjas.txt
(djangopy3env) PS C:\Users\blufo\onedrive\documents\coding_dojo\python_stack\django\django_orm\dojo_ninjas> python manage.py shell                                                              Python 3.8.0 (tags/v3.8.0:fa919fd, Oct 14 2019, 19:37:50) [MSC v.1916 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)

Create and run the migration files. run shell and import
>>> from ninja_app.models import *

Create 3 new dojos
>>> Dojo.objects.create(name = "Fire", city="Atlanta", state='GA')
<Dojo: Dojo object (1)>
>>> Dojo.objects.create(name = "Light", city="Absalom", state='EX')
<Dojo: Dojo object (2)>
>>> Dojo.objects.create(name = "Earth", city="Kraghammer", state='DF')
<Dojo: Dojo object (3)>

Delete the 3 dojos you just created
>>> Dojo.objects.get(id=1).delete()
(1, {'ninja_app.Ninja': 0, 'ninja_app.Dojo': 1})
>>> Dojo.objects.get(id=2).delete()
(1, {'ninja_app.Ninja': 0, 'ninja_app.Dojo': 1})
>>> Dojo.objects.get(id=3).delete()
(1, {'ninja_app.Ninja': 0, 'ninja_app.Dojo': 1})

Create 3 more dojos
>>> Dojo.objects.create(name = "Water", city="Hillandale", state='JS')
<Dojo: Dojo object (4)>
>>> Dojo.objects.create(name = "Monkey", city="Cas Creek", state='CP')
<Dojo: Dojo object (5)>
>>> Dojo.objects.create(name = "Spider", city="Whispy Fen", state='KB')
<Dojo: Dojo object (6)>

>>> dojo1 = Dojo.objects.get(id=4)
>>> dojo2 = Dojo.objects.get(id=5)
>>> dojo3 = Dojo.objects.get(id=6)

Create 3 ninjas that belong to the first dojo
>>> Ninja.objects.create(dojo = dojo1, first_name = 'Rutger', last_name = 'Howard')
<Ninja: Ninja object (1)>
>>> Ninja.objects.create(dojo = dojo1, first_name = 'Jon', last_name = 'Seastedt')
<Ninja: Ninja object (2)>
>>> Ninja.objects.create(dojo = dojo1, first_name = 'Indra', last_name = 'Anoelis')
<Ninja: Ninja object (3)>

Create 3 ninjas that belong to the second dojo
>>> Ninja.objects.create(dojo = dojo2, first_name = 'Thorne', last_name = 'Dedman')
<Ninja: Ninja object (4)>
>>> Ninja.objects.create(dojo = dojo2, first_name = 'Gael', last_name = 'Leafstrider')
<Ninja: Ninja object (5)>
>>> Ninja.objects.create(dojo = dojo2, first_name = 'Corben', last_name = 'Dallas')
<Ninja: Ninja object (6)>

Create 3 ninjas that belong to the third dojo
>>> Ninja.objects.create(dojo = dojo3, first_name = 'Strahd', last_name = 'Von Zarovich')
<Ninja: Ninja object (7)>
>>> Ninja.objects.create(dojo = dojo3, first_name = 'Ireena', last_name = 'Kolyana')
<Ninja: Ninja object (8)>
>>> Ninja.objects.create(dojo = dojo3, first_name = 'Mordenkainen', last_name = 'Volo')
<Ninja: Ninja object (9)>

Retrieve all ninjas from the first dojo
>>> dojo1_nin = Ninja.objects.filter(dojo = dojo1)
>>> dojo1_nin
<QuerySet [<Ninja: Ninja object (1)>, <Ninja: Ninja object (2)>, <Ninja: Ninja object (3)>]>

Retrieve all ninjas from the second dojo
>>> dojo2_nin = Ninja.objects.filter(dojo = dojo2)
>>> dojo2_nin
<QuerySet [<Ninja: Ninja object (4)>, <Ninja: Ninja object (5)>, <Ninja: Ninja object (6)>]>

Retrieve all ninjas from the third dojo
>>> dojo3_nin = Ninja.objects.filter(dojo = dojo3)
>>> dojo3_nin
<QuerySet [<Ninja: Ninja object (7)>, <Ninja: Ninja object (8)>, <Ninja: Ninja object (9)>]>


Add a new field called 'desc' to your Dojo
(djangopy3env) PS C:\Users\blufo\onedrive\documents\coding_dojo\python_stack\django\django_orm\dojo_ninjas> python manage.py makemigrations                                                     You are trying to add a non-nullable field 'desc' to dojo without a default; we can't do that (the database needs something to populate existing rows).
Please select a fix:
 1) Provide a one-off default now (will be set on all existing rows with a null value for this column)
 2) Quit, and let me add a default in models.py
Select an option: 1
Please enter the default value now, as valid Python
The datetime and django.utils.timezone modules are available, so you can do e.g. timezone.now
Type 'exit' to exit this prompt
>>> 'old dojo'
Migrations for 'ninja_app':
  ninja_app\migrations\0002_dojo_desc.py
    - Add field desc to dojo
(djangopy3env) PS C:\Users\blufo\onedrive\documents\coding_dojo\python_stack\django\django_orm\dojo_ninjas> python manage.py migrate                                                            Operations to perform:
  Apply all migrations: admin, auth, contenttypes, ninja_app, sessions
Running migrations:
  Applying ninja_app.0002_dojo_desc... OK


Query: Create a new Dojo
  (djangopy3env) PS C:\Users\blufo\onedrive\documents\coding_dojo\python_stack\django\django_orm\dojo_ninjas> python manage.py shell                                                              Python 3.8.0 (tags/v3.8.0:fa919fd, Oct 14 2019, 19:37:50) [MSC v.1916 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from ninja_app.models import *
>>> Dojo.objects.create(name='Wind' city='Northumbria' state='AN' desc='A floating nation that drifts along the winds, deep within the Plane of Air'
  File "<console>", line 1
    Dojo.objects.create(name='Wind' city='Northumbria' state='AN' desc='A floating nation that drifts along the winds, deep within the Plane of Air'
                                    ^
SyntaxError: invalid syntax
>>> Dojo.objects.create(name='Wind', city='Northumbria', state='AN' ,desc='A floating nation that drifts along the winds, deep within the Plane of Air')
<Dojo: Dojo object (7)>
>>> airdojo = Dojo.objects.get(id=7)
>>> airdojo.name
'Wind'
>>> airdojo.city
'Northumbria'
>>> airdojo.state
'AN'
>>> airdojo.desc
'A floating nation that drifts along the winds, deep within the Plane of Air'